Closed
Bug 1215616
Opened 10 years ago
Closed 10 years ago
wrong raddr and rport in srflx ice candidates
Categories
(Core :: WebRTC: Networking, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla44
| Tracking | Status | |
|---|---|---|
| firefox41 | --- | unaffected |
| firefox42 | --- | fixed |
| firefox43 | --- | fixed |
| firefox44 | --- | fixed |
| backlog | webrtc/webaudio+ |
People
(Reporter: bemasc, Assigned: drno)
References
()
Details
Attachments
(1 file)
|
40 bytes,
text/x-review-board-request
|
bwc
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details |
User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/47.0.2526.8 Safari/537.36
Steps to reproduce:
Started a peerconnection with a STUN server
Actual results:
Got this candidate out:
candidate:8 1 UDP 1694179327 216.239.33.166 56450 typ srflx raddr 216.239.33.166 rport 56450
Expected results:
The raddr should have been the address of one of the actual local interfaces
This appears to be a regression between Firefox 41 and Firefox 42. The problem may have been introduced as a side effect of IP privacy changes. The problem is very similar to #931700, but that bug only affected relay candidates, and was already present in Firefox 41
| Assignee | ||
Comment 1•10 years ago
|
||
Easily reproducible by opening http://mozilla.github.io/webrtc-landing/stun_test.html with Fx 41 and 42.
| Assignee | ||
Comment 2•10 years ago
|
||
Bug 1215616: use base address for server rflx candidates. r?bwc
Attachment #8675230 -
Flags: review?(docfaraday)
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → drno
Rank: 18
status-firefox41:
--- → unaffected
status-firefox42:
--- → affected
status-firefox43:
--- → affected
status-firefox44:
--- → affected
Priority: -- → P1
Comment 3•10 years ago
|
||
Comment on attachment 8675230 [details]
MozReview Request: Bug 1215616: use base address for server rflx candidates. r?bwc
https://reviewboard.mozilla.org/r/22353/#review19957
Ha! Awesome.
Attachment #8675230 -
Flags: review?(docfaraday) → review+
Comment 4•10 years ago
|
||
Ouch... and we need to get this in ASAP and nominate it for uplifts.
Updated•10 years ago
|
Component: Untriaged → WebRTC: Networking
Product: Firefox → Core
Comment 6•10 years ago
|
||
I preemptively landed this so it could bake (and get into m-c this weekend, maybe).
Comment 7•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
| Assignee | ||
Updated•10 years ago
|
backlog: --- → webrtc/webaudio+
OS: Unspecified → All
Hardware: Unspecified → All
| Assignee | ||
Comment 8•10 years ago
|
||
Comment on attachment 8675230 [details]
MozReview Request: Bug 1215616: use base address for server rflx candidates. r?bwc
Just requesting early, so we have the approvals in time.
Approval Request Comment
[Feature/regressing bug #]: The bug got introduce via bug 1189041, which landed in 43 and got uplifted to 42.
[User impact if declined]: The ICE candidates handed out by the WebRTC APIs are presenting wrong IP addresses. It should not affect the ability to establish WebRTC connection, but there might be WebRTC implementations which cause trouble with these wrong ICE candidates.
[Describe test coverage new/current, TreeHerder]: Manually tested.
[Risks and why]: The risk is extremly low as it is only a one line change which restores the behavior from before bug 1189041 landed.
[String/UUID change made/needed]: n/a
Attachment #8675230 -
Flags: approval-mozilla-beta?
Attachment #8675230 -
Flags: approval-mozilla-aurora?
Comment 9•10 years ago
|
||
Comment on attachment 8675230 [details]
MozReview Request: Bug 1215616: use base address for server rflx candidates. r?bwc
Should be in 42 beta 8.
Attachment #8675230 -
Flags: approval-mozilla-beta?
Attachment #8675230 -
Flags: approval-mozilla-beta+
Attachment #8675230 -
Flags: approval-mozilla-aurora?
Attachment #8675230 -
Flags: approval-mozilla-aurora+
Comment 10•10 years ago
|
||
Comment 11•10 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•